crates/ruff_python_parser/tests/snapshots/valid_syntax@assign_stmt_starred_expr_value.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/assign_stmt_starred_expr_value.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..36,
        body: Suite {
            range: 0..36,
            node_index: NodeIndex(None),
            statements: [
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 0..5,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..1,
                                    id: Name("_"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 4..5,
                                value: Int(
                                    4,
                                ),
                            },
                        ),
                    },
                ),
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 6..13,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 6..7,
                                    id: Name("_"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: List(
                            ExprList {
                                node_index: NodeIndex(None),
                                range: 10..13,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 11..12,
                                            value: Int(
                                                4,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                            },
                        ),
                    },
                ),
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 14..25,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 14..15,
                                    id: Name("_"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 18..25,
                                elts: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 19..23,
                                            value: List(
                                                ExprList {
                                                    node_index: NodeIndex(None),
                                                    range: 20..23,
                                                    elts: [
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 21..22,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                            },
                        ),
                    },
                ),
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 26..35,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 26..27,
                                    id: Name("_"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 30..35,
                                elts: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 30..34,
                                            value: List(
                                                ExprList {
                                                    node_index: NodeIndex(None),
                                                    range: 31..34,
                                                    elts: [
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 32..33,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
