crates/ruff_python_parser/tests/snapshots/valid_syntax@assign_targets_terminator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/assign_targets_terminator.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..39,
        body: Suite {
            range: 0..39,
            node_index: NodeIndex(None),
            statements: [
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 0..13,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 4..5,
                                    id: Name("y"),
                                    ctx: Store,
                                },
                            ),
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 8..9,
                                    id: Name("z"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 12..13,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 15..19,
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 15..19,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 15..16,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 18..19,
                                            id: Name("b"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    },
                ),
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 20..33,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 20..21,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 24..25,
                                    id: Name("y"),
                                    ctx: Store,
                                },
                            ),
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 28..29,
                                    id: Name("z"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 32..33,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 34..38,
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 34..38,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 34..35,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 37..38,
                                            id: Name("b"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
